@@ -3,6 +3,8 @@ preSigil-0.9.8
     - Make sure when new empty epub3's are created that the toc does not use a doctype (Issue # 250)
     - Make GetUniqueFilenameVersion work even on Case-Insensitive filesystems (Issue #247)
     - Properly urlencode/decode all hrefs in plugin's ResultXML in launcher/PluginRunner to prevent parse errors
+    - Add proper detection for minimum service pack requirements in Windows installer
+    - Include workaround for bug in KDE Qt5 plugin on Linux that keep plugins from launching from menu
 
 Sigil-0.9.7
    Bug Fixes
